--- a/tests/adapter/unittest/BUILD.gn
+++ b/tests/adapter/unittest/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2021 Huawei Device Co., Ltd.
+# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -183,7 +183,7 @@ if (defined(ohos_lite)) {
     }
   }
 
-  ohos_unittest("AdapterThreadTest") {
+  ohos_unittest("SoftbusThreadTest") {
     module_out_path = module_output_path
     sources = [ "softbus_thread_test.cpp" ]
     include_dirs = [
@@ -210,7 +210,7 @@ if (defined(ohos_lite)) {
     }
   }
 
-  ohos_unittest("AdapterTimeTest") {
+  ohos_unittest("SoftbusTimeTest") {
     module_out_path = module_output_path
     sources = [ "softbus_time_test.cpp" ]
     include_dirs = [
@@ -361,8 +361,8 @@ if (defined(ohos_lite)) {
       ":AdapterDsoftbusRangeTest",
       ":AdapterDsoftbusSocketTest",
       ":AdapterFileTest",
-      ":AdapterThreadTest",
-      ":AdapterTimeTest",
+      ":SoftbusThreadTest",
+      ":SoftbusTimeTest",
     ]
     if (!defined(ohos_lite) && softbus_communication_wifi_feature == true) {
       deps += [ ":AdapterDsoftbusWifiTest" ]
