--- a/tests/core/connection/common/unittest/BUILD.gn
+++ b/tests/core/connection/common/unittest/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2021 Huawei Device Co., Ltd.
+# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -16,7 +16,7 @@ import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
 module_output_path = "dsoftbus/connection"
 
-ohos_unittest("SoftbusCommonTest") {
+ohos_unittest("SoftbusConnCommonTest") {
   module_out_path = module_output_path
 
   #ldflags = [ "-lstdc++" ]
