--- a/tests/core/connection/p2p/interface_mock/BUILD.gn
+++ b/tests/core/connection/p2p/interface_mock/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2022 Huawei Device Co., Ltd.
+# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -19,7 +19,7 @@ import("//foundation/communication/dsoftbus/tests/utils/utils.gni")
 
 module_output_path = "dsoftbus/connection"
 
-ohos_unittest("P2pInterfaceMockTest") {
+ohos_unittest("P2pInterfaceTest") {
   module_out_path = module_output_path
   sources = [
     "$dsoftbus_root_path/core/connection/p2p/common/src/p2plink_loop.c",
@@ -88,5 +88,5 @@ ohos_unittest("P2pInterfaceMockTest") {
 
 group("unittest") {
   testonly = true
-  deps = [ ":P2pInterfaceMockTest" ]
+  deps = [ ":P2pInterfaceTest" ]
 }
