--- a/tests/core/connection/p2p/negotiation/BUILD.gn
+++ b/tests/core/connection/p2p/negotiation/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2022 Huawei Device Co., Ltd.
+# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -19,7 +19,7 @@ import("//foundation/communication/dsoftbus/tests/utils/utils.gni")
 
 module_output_path = "dsoftbus/connection"
 
-ohos_unittest("P2pNegotiationMockTest") {
+ohos_unittest("P2pNegotiationTest") {
   module_out_path = module_output_path
   sources = [
     "negotiation_mock.cpp",
@@ -89,5 +89,5 @@ ohos_unittest("P2pNegotiationMockTest") {
 
 group("unittest") {
   testonly = true
-  deps = [ ":P2pNegotiationMockTest" ]
+  deps = [ ":P2pNegotiationTest" ]
 }
