--- a/tests/core/discovery/ble/dispatcher/BUILD.gn
+++ b/tests/core/discovery/ble/dispatcher/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2021 Huawei Device Co., Ltd.
+# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -18,7 +18,7 @@ import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
 module_output_path = "dsoftbus/discovery"
 
-ohos_unittest("DiscoveryBleDispatcherTest") {
+ohos_unittest("DiscBleDispatcherTest") {
   module_out_path = module_output_path
   sources = [ "disc_ble_dispatcher_test.cpp" ]
 
@@ -53,5 +53,5 @@ ohos_unittest("DiscoveryBleDispatcherTest") {
 
 group("unittest") {
   testonly = true
-  deps = [ ":DiscoveryBleDispatcherTest" ]
+  deps = [ ":DiscBleDispatcherTest" ]
 }
