--- a/tests/core/discovery/ble/softbus_ble_mock/BUILD.gn
+++ b/tests/core/discovery/ble/softbus_ble_mock/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2021 Huawei Device Co., Ltd.
+# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -19,7 +19,7 @@ import("//foundation/communication/dsoftbus/tests/utils/utils.gni")
 
 module_output_path = "dsoftbus/discovery"
 
-ohos_unittest("DiscBleMockTest") {
+ohos_unittest("DiscBleTest") {
   module_out_path = module_output_path
   sources = [
     "$dsoftbus_root_path/core/discovery/ble/softbus_ble/src/disc_ble.c",
@@ -80,5 +80,5 @@ ohos_unittest("DiscBleMockTest") {
 
 group("unittest") {
   testonly = true
-  deps = [ ":DiscBleMockTest" ]
+  deps = [ ":DiscBleTest" ]
 }
