--- a/tests/core/discovery/coap/nstackx_adapter_mock/BUILD.gn
+++ b/tests/core/discovery/coap/nstackx_adapter_mock/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2022 Huawei Device Co., Ltd.
+# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -19,7 +19,7 @@ import("//foundation/communication/dsoftbus/tests/utils/utils.gni")
 
 module_output_path = "dsoftbus/discovery"
 
-ohos_unittest("AdapterMockTest") {
+ohos_unittest("NstackxAdapterTest") {
   module_out_path = module_output_path
   sources = [
     "nstackx_adapter_mock.cpp",
@@ -72,5 +72,5 @@ ohos_unittest("AdapterMockTest") {
 
 group("unittest") {
   testonly = true
-  deps = [ ":AdapterMockTest" ]
+  deps = [ ":NstackxAdapterTest" ]
 }
