--- a/tests/sdk/discovery/unittest/BUILD.gn
+++ b/tests/sdk/discovery/unittest/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2021 Huawei Device Co., Ltd.
+# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -70,7 +70,7 @@ if (defined(ohos_lite)) {
     }
   }
 
-  ohos_unittest("Disc_Test") {
+  ohos_unittest("DiscSdkTest") {
     module_out_path = module_output_path
     sources = [ "disc_sdk_test.cpp" ]
     include_dirs = [
@@ -108,7 +108,7 @@ if (defined(ohos_lite)) {
     testonly = true
     deps = [
       ":DiscSdkOnlyL2Test",
-      ":Disc_Test",
+      ":DiscSdkTest",
     ]
   }
 }
