--- a/tests/core/transmission/trans_channel/common/BUILD.gn
+++ b/tests/core/transmission/trans_channel/common/BUILD.gn
@@ -16,7 +16,7 @@ import("//foundation/communication/dsoftbus/dsoftbus.gni")
 
 module_output_path = "dsoftbus/transmission"
 
-ohos_unittest("TransLanePendingTest") {
+ohos_unittest("TransLaneTest") {
   module_out_path = module_output_path
   sources = [ "trans_lane_test.cpp" ]
 
@@ -67,5 +67,5 @@ ohos_unittest("TransLanePendingTest") {
 
 group("unittest") {
   testonly = true
-  deps = [ ":TransLanePendingTest" ]
+  deps = [ ":TransLaneTest" ]
 }
