--- a/tests/core/bus_center/utils/BUILD.gn
+++ b/tests/core/bus_center/utils/BUILD.gn
@@ -51,7 +51,6 @@ ohos_unittest("LNNConnAddrUtilsTest") {
     "$dsoftbus_root_path/interfaces/kits/discovery",
     "$dsoftbus_root_path/core/bus_center/service/include",
     "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/decision_db/include",
-    "//base/security/huks/interfaces/inner_api/huks_standard/main/include",
   ]
   deps = [
     "$dsoftbus_root_path/adapter:softbus_adapter",
@@ -71,6 +70,7 @@ ohos_unittest("LNNConnAddrUtilsTest") {
     external_deps = [
       "c_utils:utils",
       "hilog:libhilog",
+      "huks:libhukssdk",
     ]
   }
 }
