device_auth rename innerkits to inner_api
Signed-off-by: fuzikun <fuzikun@huawei.com>

--- a/tests/core/bus_center/lnn/BUILD.gn
+++ b/tests/core/bus_center/lnn/BUILD.gn
@@ -114,6 +114,7 @@ lnn_mock_test_include_dirs = [
 lnn_mock_test_deps = [
   "$dsoftbus_root_path/adapter:softbus_adapter",
   "$dsoftbus_root_path/core/common:softbus_utils",
+  "$dsoftbus_root_path/core/frame:softbus_server",
   "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
   "//base/security/device_auth/services:deviceauth_sdk",
   "//third_party/googletest:gmock",
@@ -301,6 +302,7 @@ ohos_unittest("LNNNetBuilderTest") {
     "$dsoftbus_root_path/core/bus_center/utils/include",
     "$dsoftbus_root_path/interfaces/kits/bus_center",
     "$dsoftbus_root_path/interfaces/kits/common",
+    "$dsoftbus_root_path/interfaces/kits/discovery",
     "$dsoftbus_root_path/core/adapter/bus_center/include",
     "//commonlibrary/c_utils/base/include",
     "//third_party/cJSON",
@@ -365,6 +367,7 @@ ohos_unittest("LNNNetBuilderMockTest") {
     "$dsoftbus_root_path/core/bus_center/utils/include",
     "$dsoftbus_root_path/interfaces/kits/bus_center",
     "$dsoftbus_root_path/interfaces/kits/common",
+    "$dsoftbus_root_path/interfaces/kits/discovery",
     "$dsoftbus_root_path/core/adapter/bus_center/include",
     "//commonlibrary/c_utils/base/include",
     "//third_party/cJSON",
@@ -716,6 +719,7 @@ ohos_unittest("LNNBtNetworkImplMockTest") {
   deps = [
     "$dsoftbus_root_path/adapter:softbus_adapter",
     "$dsoftbus_root_path/core/common:softbus_utils",
+    "$dsoftbus_root_path/core/frame:softbus_server",
     "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
     "//base/security/device_auth/services:deviceauth_sdk",
     "//third_party/googletest:gmock",
@@ -848,6 +852,7 @@ ohos_unittest("LNNIpNetworkImplMockTest") {
   deps = [
     "$dsoftbus_root_path/adapter:softbus_adapter",
     "$dsoftbus_root_path/core/common:softbus_utils",
+    "$dsoftbus_root_path/core/frame:softbus_server",
     "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
     "//base/security/device_auth/services:deviceauth_sdk",
     "//third_party/googletest:gmock",
@@ -1179,7 +1184,9 @@ ohos_unittest("LNNLaneMockTest") {
     "$dsoftbus_root_path/core/connection/p2p/common/include",
     "$dsoftbus_root_path/core/discovery/manager/include",
     "$dsoftbus_root_path/core/discovery/interface",
+    "$dsoftbus_root_path/interfaces/kits/bus_center",
     "$dsoftbus_root_path/interfaces/kits/common",
+    "$dsoftbus_root_path/interfaces/kits/discovery",
     "//commonlibrary/c_utils/base/include",
     "//foundation/communication/wifi/wifi/interfaces/kits/c",
     "//foundation/communication/wifi/wifi/frameworks/native/include",
@@ -1238,7 +1245,9 @@ ohos_unittest("LNNLaneLinkMockTest") {
     "$dsoftbus_root_path/core/connection/p2p/common/include",
     "$dsoftbus_root_path/core/discovery/manager/include",
     "$dsoftbus_root_path/core/discovery/interface",
+    "$dsoftbus_root_path/interfaces/kits/bus_center",
     "$dsoftbus_root_path/interfaces/kits/common",
+    "$dsoftbus_root_path/interfaces/kits/discovery",
     "//commonlibrary/c_utils/base/include",
     "//foundation/communication/wifi/wifi/interfaces/kits/c",
     "//foundation/communication/wifi/wifi/frameworks/native/include",
@@ -1300,7 +1309,9 @@ ohos_unittest("LNNTransLaneMockTest") {
     "$dsoftbus_root_path/core/connection/p2p/common/include",
     "$dsoftbus_root_path/core/discovery/manager/include",
     "$dsoftbus_root_path/core/discovery/interface",
+    "$dsoftbus_root_path/interfaces/kits/bus_center",
     "$dsoftbus_root_path/interfaces/kits/common",
+    "$dsoftbus_root_path/interfaces/kits/discovery",
     "//commonlibrary/c_utils/base/include",
     "//foundation/communication/wifi/wifi/interfaces/kits/c",
     "//foundation/communication/wifi/wifi/frameworks/native/include",
@@ -1439,6 +1450,7 @@ if (!defined(ohos_lite) && enhanced_test) {
     deps = [
       "$dsoftbus_root_path/adapter:softbus_adapter",
       "$dsoftbus_root_path/core/common:softbus_utils",
+      "$dsoftbus_root_path/core/frame:softbus_server",
       "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
       "//base/security/device_auth/services:deviceauth_sdk",
       "//third_party/googletest:gmock",
