--- a/core/frame/standard/init/src/softbus_server.cfg
+++ b/core/frame/standard/init/src/softbus_server.cfg
@@ -12,7 +12,8 @@
             "uid" : "dsoftbus",
             "gid" : ["dsoftbus", "system", "shell"],
             "permission" : ["ohos.permission.PERMISSION_USED_STATS", "ohos.permission.GET_SENSITIVE_PERMISSIONS"],
-            "permission_acls" : ["ohos.permission.GET_SENSITIVE_PERMISSIONS"]
+            "permission_acls" : ["ohos.permission.GET_SENSITIVE_PERMISSIONS"],
+            "critical" : [1, 10, 10]
         }
     ]
 }
