--- a/core/frame/standard/init/src/softbus_server_musl.cfg
+++ b/core/frame/standard/init/src/softbus_server_musl.cfg
@@ -13,7 +13,8 @@
             "gid" : ["dsoftbus", "system", "shell"],
             "secon" : "u:r:softbus_server:s0",
             "permission" : ["ohos.permission.PERMISSION_USED_STATS", "ohos.permission.GET_SENSITIVE_PERMISSIONS"],
-            "permission_acls" : ["ohos.permission.GET_SENSITIVE_PERMISSIONS"]
+            "permission_acls" : ["ohos.permission.GET_SENSITIVE_PERMISSIONS"],
+            "critical" : [1, 10, 10]
         }
     ]
 }
