feat:add cfi check
Signed-off-by: fangdong7 <fangdong7@huawei.com>

--- a/components/nstackx/fillp/BUILD.gn
+++ b/components/nstackx/fillp/BUILD.gn
@@ -104,6 +104,11 @@ if (defined(ohos_lite)) {
 } else {
   import("//build/ohos.gni")
   ohos_shared_library("FillpSo.open") {
+    sanitize = {
+      cfi = true
+      cfi_cross_so = true
+      debug = true
+    }
     cflags = fillp_cflags
     cflags += [
       "-Wall",
