--- a/components/nstackx/nstackx_util/BUILD.gn
+++ b/components/nstackx/nstackx_util/BUILD.gn
@@ -174,6 +174,11 @@ if (defined(ohos_lite)) {
   }
 
   ohos_shared_library("nstackx_util.open") {
+    sanitize = {
+      cfi = true
+      cfi_cross_so = true
+      debug = true
+    }
     cflags += [
       "-DMBEDTLS_INCLUDED",
       "-DNSTACKX_WITH_HMOS_LINUX",
