modify error fuzz
Signed-off-by: xwh <jiewenhao@huawei.com>

--- a/tests/core/common/utils/fuzztest/BUILD.gn
+++ b/tests/core/common/utils/fuzztest/BUILD.gn
@@ -23,7 +23,7 @@ group("fuzztest") {
     "removeallrecord_fuzzer:RemoveAllRecordFuzzTest",
     "removerecordbykey_fuzzer:RemoveRecordByKeyFuzzTest",
     "softbusutils_fuzzer:SoftBusUtilsFuzzTest",
-    "sqlite3utils_fuzzer:Sqlite3UntilsFuzzTest",
+    "sqlite3utils_fuzzer:Sqlite3UtilsFuzzTest",
     "updatedbpassword_fuzzer:UpdateDbPasswordFuzzTest",
   ]
 }
