--- a/tests/core/common/utils/fuzztest/sqlite3utils_fuzzer/BUILD.gn
+++ b/tests/core/common/utils/fuzztest/sqlite3utils_fuzzer/BUILD.gn
@@ -18,7 +18,7 @@ import("//foundation/communication/dsoftbus/dsoftbus.gni")
 module_output_path = "dsoftbus/common"
 
 ##############################fuzztest##########################################
-ohos_fuzztest("Sqlite3UntilsFuzzTest") {
+ohos_fuzztest("Sqlite3UtilsFuzzTest") {
   module_out_path = module_output_path
   fuzz_config_file = "//foundation/communication/dsoftbus/tests/core/common/utils/fuzztest/sqlite3utils_fuzzer"
   include_dirs = [ "$dsoftbus_root_path/adapter/common/include" ]
