hispark_taurus_mini_system sofubus server bug fix
Signed-off-by: y30033032 <yuanmeng36@huawei.com>

--- a/core/adapter/core_adapter.gni
+++ b/core/adapter/core_adapter.gni
@@ -32,8 +32,10 @@ bus_center_core_adapter_deps =
     [ "//base/startup/init/interfaces/innerkits:libbegetutil" ]
 
 if (defined(ohos_lite)) {
-  bus_center_core_adapter_src += [ "$dsoftbus_root_path/core/adapter/bus_center/src/lnn_settingdata_event_monitor_virtual.cpp" ]
-
+  bus_center_core_adapter_src += [
+    "$dsoftbus_root_path/core/adapter/bus_center/src/lnn_settingdata_event_monitor_virtual.cpp",
+    "$dsoftbus_root_path/core/adapter/bus_center/src/lnn_ohos_account_virtual.cpp",
+  ]
   bus_center_core_adapter_inc += [
     "$dsoftbus_root_path/core/adapter/bus_center/include",
     "$dsoftbus_root_path/core/bus_center/utils/include",
